Fixes line number overflow bug

--- a/server/scss/_home.scss
+++ b/server/scss/_home.scss
@@ -28,7 +28,7 @@ button.btn {
 }
 
 .ace_gutter-layer {
-  padding: $space;
+  padding-top: $space;
 }
 
 .ace_content {
